# assistent-agent

./: README.md
01-ai-mentor/: .gitignore  README.md  demo_curls.sh  main.py  pyproject.toml  system_prompt.txt
01-ai-mentor/app/: __init__.py  config.py  database.py  models.py  routes.py  services.py
01-ai-mentor/static/: index.html
02-weather-agent/: .env.example  README.md  main.py  pyproject.toml  system_prompt.txt
02-weather-agent/app/: database.py  routes.py  services.py  tools.py
03-weather-agent-tools/: README.md  main.py  pyproject.toml  system_prompt.txt
03-weather-agent-tools/app/: config.py  models.py  services.py  tools.py  weather.py
03-weather-agent-tools/static/: index.html
